# AirQualitySensor-IDF

./: .gitignore  .gitmodules  1.txt  CMakeLists.txt  README.md  gulpfile.js  package-lock.json  package.json  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.sensor1  sdkconfig.sensor2  sonar-project.properties
.github/workflows/: build.yml  clangcheck.yml  codeql.yml  cppcheck.yml  cpplint.yml  sonarcloud.yml
main/: .clang-format  CMakeLists.txt  Kconfig  app_events.h  exceptions.h  idf_component.yml  lv_conf.h  main.cpp
main/config/: config_manager.cpp  config_manager.h  credentials.h  preferences.cpp  preferences.h
main/hardware/: display.cpp  display.h  hardware.cpp  hardware.h  hardware_info.cpp  lgfx_device.cpp  lgfx_device.h  pins.h  sd_card.cpp  sd_card.h  sdcard.cpp  sdcard.h
main/hardware/display/: display.cpp  display.h  lgfx_device.cpp  lgfx_device.h
main/hardware/lvgl_fs/: lvgl_fs_sd_card.c  lvgl_fs_sd_card.h
main/hardware/sensors/: bh1750_sensor_device.cpp  bh1750_sensor_device.h  last_measurement_helper.h  scd30_sensor_device.cpp  scd30_sensor_device.h  scd4x_sensor_device.cpp  scd4x_sensor_device.h  sensor.h  sensor_id.h  sht3x_sensor_device.cpp  sht3x_sensor_device.h  sps30_sensor_device.cpp  sps30_sensor_device.h
main/hardware/sps30/: sps30_glue.cpp
main/homekit/: homekit_definitions.h  homekit_integration.cpp  homekit_integration.h
main/http_ota/: http.c  http.h
main/logging/: commands.cpp  commands.h  logger.cpp  logger.h  logger_hook_sink.h  logging.cpp  logging.h  logging_tags.h  sd_card_sink.h  serial_hook_sink.h  web_callback_sink.h
main/operations/: operations.cpp  operations.h
main/sensor/: sensor.h  sensor_id.h  sensors_definitions.cpp
main/ui/: ui2.cpp  ui2.h  ui_boot_screen.cpp  ui_boot_screen.h  ui_hardware_info_screen.h  ui_hardware_screen.cpp  ui_hardware_screen.h  ui_homekit_screen.cpp  ui_homekit_screen.h  ui_img_logo.c  ui_information_screen.cpp  ui_information_screen.h  ui_inter_screen_interface.h  ui_interface.cpp  ui_interface.h  ui_launcher_screen.cpp  ui_launcher_screen.h  ui_main_screen.cpp  ui_main_screen.h  ui_screen.cpp  ui_screen.h  ui_screen_with_sensor_panel.cpp  ui_screen_with_sensor_panel.h  ui_sensor_detail_screen.cpp  ui_sensor_detail_screen.h  ui_wifi_enroll_screen.cpp  ui_wifi_enroll_screen.h
main/util/: CircularBuffer.h  CircularBuffer.tpp  arduino_json_helper.h  change_callback.h  circular_buffer.h  cores.h  default_event.h  default_event_subscriber.h  exceptions.h  finally.h  helper.cpp  helper.h  misc.h  noncopyable.h  ota.cpp  ota.h  psram_allocator.h  semaphore_lockable.h  singleton.h  static_queue.h  string_helper.cpp  string_helper.h  task_wrapper.h  web_server_request.cpp
main/util/async_web_server/: async_web_server1.cpp  async_web_server1.h  http_event_source.cpp  http_event_source.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_server.cpp  http_server.h
main/util/filesystem/: file.h  file_info.h  filesystem.cpp  filesystem.h
main/util/hash/: hash.h
main/util/timer/: timer.cpp  timer.h
main/web/: .gitignore
main/web/static/: debug.html  fs.html  index.html  login.html
main/web/static/css/: datatables.min.css
main/web_server/: async_web_server.cpp  async_web_server.h  web_server.cpp  web_server.h
main/wifi/: smart_config_wifi_enroll.cpp  smart_config_wifi_enroll.h  wifi_events_notify.h  wifi_manager.cpp  wifi_manager.h  wifi_sta.cpp  wifi_sta.h
static/web/: debug.html  index.html  login.html
static/web/js/extra/: datatables.min.js
