idf_component_register(SRCS "main.cpp" 
                            "hardware/sdcard.cpp" 
                            "hardware/lgfx_device.cpp" 
                            "hardware/display.cpp" 
                            "hardware/hardware.cpp" 
                            "hardware/lvgl_fs/lvgl_fs_sd_card.c" 
                            "sensor/sensors_definitions.cpp" 
                            "ui/ui2.cpp" 
                            "ui/ui_img_logo.c" 
                            "config/config_manager.cpp"
                            "wifi/wifi_sta.cpp"
                            "wifi/wifi_manager.cpp"
                            "util/helper.cpp"
                            "util/filesystem/filesystem.cpp"
                            "util/async_web_server/http_server.cpp"
                            "util/async_web_server/http_request.cpp"
                            "util/async_web_server/http_response.cpp"
                            "http_ota/http.c"
                            "web_server/web_server.cpp"
                            "operations/operations.cpp"

                    INCLUDE_DIRS "."
                    REQUIRES fatfs spi_flash LovyanGFX lvgl mbedtls esp_wifi esp_hw_support app_update esp_http_server esp-tls)

target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-deprecated-enum-enum-conversion")
