idf_component_register(SRCS "main.cpp" 
                            "hardware/sd_card.cpp" 
                            "hardware/lgfx_device.cpp" 
                            "hardware/display.cpp" 
                            "hardware/hardware.cpp" 
                            "hardware/hardware_info.cpp" 
                            "hardware/lvgl_fs/lvgl_fs_sd_card.c" 
                            "hardware/sps30/sps30.c" 
                            "hardware/sps30/sps30_glue.cpp" 
                            "hardware/sps30/sensirion_common.c" 
                            "sensor/sensors_definitions.cpp" 
                            "ui/ui2.cpp" 
                            "ui/ui_img_logo.c" 
                            "config/config_manager.cpp"
                            "wifi/wifi_sta.cpp"
                            "wifi/wifi_manager.cpp"
                            "wifi/smart_config_wifi_enroll.cpp"
                            "util/helper.cpp"
                            "util/filesystem/filesystem.cpp"
                            "util/async_web_server/http_server.cpp"
                            "util/async_web_server/http_request.cpp"
                            "util/async_web_server/http_response.cpp"
                            "util/async_web_server/http_event_source.cpp"
                            "util/ota.cpp"
                            "util/timer/timer.cpp"
                            "http_ota/http.c"
                            "web_server/web_server.cpp"
                            "operations/operations.cpp"
                            "logging/logging.cpp"

                    INCLUDE_DIRS "."
                    REQUIRES fatfs spi_flash LovyanGFX lvgl mbedtls esp_wifi 
                             esp_hw_support app_update esp_http_server esp-tls espcoredump
                             esp_idf_lib_helpers i2cdev bh1750 sht3x)

target_compile_options(${COMPONENT_LIB} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-enum-conversion>)
